--- a/WidgetApp/App.xaml
+++ b/WidgetApp/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="WidgetApp.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WidgetApp"
-             StartupUri="MainWindow.xaml">
+             StartupUri="WidgetMain.xaml">
     <Application.Resources>
          
     </Application.Resources>
