--- a/WidgetApp/WidgetMain.xaml
+++ b/WidgetApp/WidgetMain.xaml
@@ -1,12 +1,13 @@
 ﻿<Window x:Class="WidgetApp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WidgetApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="" Height="{Binding WindowWidth}" Width="{Binding WindowHeight}">
     <Grid>
-
+        <Image Source="{Binding ImageSource}">
+            
+        </Image>
     </Grid>
 </Window>
