--- a/WidgetApp/WidgetMain.xaml
+++ b/WidgetApp/WidgetMain.xaml
@@ -4,10 +4,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="" Height="{Binding WindowWidth}" Width="{Binding WindowHeight}">
+        Height="{Binding WindowHeight}" Width="{Binding WindowWidth}" AllowsTransparency="True" WindowStyle="None" Background="Transparent">
     <Grid>
-        <Image Source="{Binding ImageSource}">
-            
-        </Image>
+        <Image Source="{Binding ImageSource}"/>
     </Grid>
 </Window>
